--- a/profile-site2/index.html
+++ b/profile-site2/index.html
@@ -32,8 +32,8 @@
         </div>
         <!-- /.mainvisual -->
 
-        <section class="about">
-            <div class="content mt-50">
+        <section class="about mt-40">
+            <div class="content">
                 <div class="level2-heading__wrapper">
                     <h2 class="level2-heading">About</h2>
                 </div>
@@ -109,6 +109,15 @@
         <!-- /.bicycle -->
     </main>
     <!-- /main -->
-    
+    <footer class="footer mt-40">
+        <div class="footer__inner">
+            <div class="copyright__wrapper">
+                <p class="copyright__text">© 2020 Profile</p>
+            </div>
+            <!-- /.copyright__wrapper -->
+        </div>
+        <!-- /.footer__inner -->
+    </footer>
+    <!-- /.footer -->
 </body>
 </html>
