--- a/photo-book/index.html
+++ b/photo-book/index.html
@@ -5,9 +5,70 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../photo-book/css/rest.css">
+    <link rel="stylesheet" href="../photo-book/css/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__inner">
+            <h1>
+                <a class="header-logo__img" href="#"><img src="../photo-book/images/logo.svg" alt=""></a>
+            </h1>
+        </div>
+        <!-- /.header__inner -->
+    </header>
+    <!-- /.header -->
+    <main>
+        <div class="main-visual">
+            <img class="main-visual__img" src="../photo-book/images/mainvisual.jpg" alt="">
+        </div>
+        <!-- /.mainvisual -->
+        <section class="index bg-white">
+            <div class="standard-wrapper">
+                <h2 class="level2-heading">INDEX</h2>
+                <ul class="order-list">
+                    <li class="order-list__item">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+                    <li class="order-list__item">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+                    <li class="order-list__item">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+                    <li class="order-list__item">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+                    <li class="order-list__item">タイトルタイトルタイトルタイトルタイトルタイトルタイトルタイトル</li>
+                </ul>
+                <!-- /.order-list -->
+            </div>
+            <!-- /.standard-wrapper -->
+        </section>
+        <!-- /.index -->
+        <section class="detail">
+            <div class="standard-wrapper">
+                <h2 class="level2-heading">DETAIL</h2>
+                <img class="detail-img" src="../photo-book/images/detail.jpg" alt="">
+                <p class="detail__title">タイトルタイトルタイトル</p>
+                <dl class="detail-author">
+                    <dt class="detail-author__header">著者</dt>
+                    <dd class="detail-author__text">タイトルタイトルタイトル</dd>
+                    <dt class="detail-author__header">出版社名</dt>
+                    <dd class="detail-author__text">タイトルタイトルタイトル</dd>
+                    <dt class="detail-author__header">発行名</dt>
+                    <dd class="detail-author__text">タイトルタイトルタイトル</dd>
+                </dl>
+                <!-- /.detail-author -->
+                <p>テキストテキストテキストテキストテキストテキスト テキストテキストテキストテキストテキストテキスト</p>
+                <p><a class="detail-shop__link" href="#">オンラインストアで見る</a></p>
+            </div>
+            <!-- /.standard-wrapper -->
+        </section>
+        <!-- /.detail -->
+    </main>
+    <!-- /main -->
+    <footer class="footer">
+        <div class="footer__inner">
+            <div class="copyright__wrapper">
+                <p class="copyright__text">© 2020 PHOTO BOOK</p>
+            </div>
+            <!-- /.copyright__wrapper -->
+        </div>
+        <!-- /.footer__inner -->
+    </footer>
+    <!-- /.footer -->
 </body>
 </html>
