--- a/english-school/index.html
+++ b/english-school/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../english-school/css/rest.css">
-    <link rel="stylesheet" href="../english-school/css/style.css">
+    <link rel="stylesheet" href="css/rest.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <main>
@@ -26,7 +26,43 @@
             <!-- /.hero-image__inner -->
         </div>
         <!-- /.hero -->
+        <section class="reason">
+            <h2 class="level2-heading">BBBが選ばれる理由</h2>
+            <div class="reason__inner">
+                <div class="reason__body-left">
+                    <h3 class="reason__title">オンライン対応</h3>
+                    <p class="reason__text">24時間いつでも受講できる！</p>
+                </div>
+                <!-- /.reason__body-left -->
+                <div class="reason__body-right">
+                    <h3 class="reason__title">講師はネイティブ</h3>
+                    <p class="reason__text">お気に入りの講師が自由に選べる！</p>
+                </div>
+                <!-- /.reason__body-right -->
+            </div>
+            <!-- /.reason__inner -->
+        </section>
+        <!-- /.reason -->
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </main>
     <!-- /main -->
+    <script src="js/main.js"></script>
 </body>
 </html>
