--- a/english-school/index.html
+++ b/english-school/index.html
@@ -29,12 +29,12 @@
         <section class="reason">
             <h2 class="level2-heading">BBBが選ばれる理由</h2>
             <div class="reason__inner">
-                <div class="reason__body-left">
+                <div class="reason__body-left so">
                     <h3 class="reason__title">オンライン対応</h3>
                     <p class="reason__text">24時間いつでも受講できる！</p>
                 </div>
                 <!-- /.reason__body-left -->
-                <div class="reason__body-right">
+                <div class="reason__body-right so">
                     <h3 class="reason__title">講師はネイティブ</h3>
                     <p class="reason__text">お気に入りの講師が自由に選べる！</p>
                 </div>
@@ -63,6 +63,7 @@
         <br>
     </main>
     <!-- /main -->
+    <script src="js/scroll.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
