--- a/english-school/index.html
+++ b/english-school/index.html
@@ -43,24 +43,28 @@
             <!-- /.reason__inner -->
         </section>
         <!-- /.reason -->
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
+        
+        <section class="review">
+            <h2 class="level2-heading">受講生の声</h2>
+            <div class="review-person__inner">
+                <p class="review-person__text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+                    テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            </div>
+            <!-- /.review__inner -->
+            <div class="review-person__inner">
+                <p class="review-person__text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+                    テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            </div>
+            <!-- /.review__inner -->
+
+            <div class="review-person__inner">
+                <p class="review-person__text">テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+                    テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+            </div>
+            <!-- /.review__inner -->
+            
+        </section>
+        <!-- /.review -->
     </main>
     <!-- /main -->
     <script src="js/scroll.js"></script>
